--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -5,6 +5,8 @@
         <title></title>
     </head>
     <body>
+        <h1><strong><em>Noodles</em></strong></h1>
+        <a href="../index.html" target="_self" rel="noreferrer"><em>Home</em></a>
 
         
     </body>
