Add images to noodles.html

--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -6,7 +6,13 @@
     </head>
     <body>
         <h1><strong><em>Noodles</em></strong></h1>
-        <a href="../index.html" target="_self" rel="noreferrer"><em>Home</em></a>
+
+        <p><a href="../index.html" target="_self" rel="noreferrer"><em>Home</em></a></p>
+
+        <img src="../img/nod2.jpg" alt="The noodles,you know" height="300" width="300">
+        <img src="../img/nod4.jpg" alt="My noodles" height="300" width="300">
+        <img src="../img/nod3.jpg" alt="Just perfect noodles" height="300" width="300">
+        
 
         
     </body>
