Edit to images folder and noodles.html

--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -8,9 +8,9 @@
         <h1><strong><em>Noodles</em></strong></h1>
 
                 
-                    <img src="../img/nod2.jpg" alt="The noodles,you know" height="300" width="300">
-                    <img src="../img/nod4.jpg" alt="My noodles" height="300" width="300">
-                    <img src="../img/nod3.jpg" alt="Just perfect noodles" height="300" width="300">
+                    <img src="../img/IMG_6941.JPG" alt="The noodles,you know" height="300" width="300">
+                    <img src="../img/IMG_6942.JPG" alt="My noodles" height="300" width="300">
+                    <img src="../img/IMG_6943.JPG" alt="Just perfect noodles" height="300" width="300">
 
             
             <h2><i>Description</i></h2>
