Add link to jollof-rice.html in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-            <strong><em><a href="recipes/noodles.html" target="_self" rel="noreferrer">Noodles</a></em></strong>
+            <p><strong><em><a href="recipes/noodles.html" target="_self" rel="noreferrer">Noodles</a></em></strong></p>
+            <p><strong><em><a href="recipes/jollof-rice.html" target="_self" rel="noreferrer">Jollof rice</a></em></strong></p>
 
     </body>
 
