--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>My First Ever Project</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
             <p><strong><em><a href="recipes/noodles.html" target="_self" rel="noreferrer">Noodles</a></em></strong></p>
             <p><strong><em><a href="recipes/jollof-rice.html" target="_self" rel="noreferrer">Jollof rice</a></em></strong></p>
+            <p><strong><em><a href="recipes/vegetable.html" target="_self" rel="noreferrer">Vegetable soup</a></em></strong></p>
 
     </body>
 
