Edit to the html files and make css to beautify it all

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>My First Ever Project</title>
+        <link rel="stylesheet" href="./css /style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 id="main">Odin Recipes</h1>
 
-            <p><strong><em><a href="recipes/noodles.html" target="_self" rel="noreferrer">Noodles</a></em></strong></p>
+            <p class="odin noodles"><strong><em><a href="recipes/noodles.html" target="_self" rel="noreferrer">Noodles</a></em></strong></p>
 
-            <p><strong><em><a href="recipes/jollof-rice.html" target="_self" rel="noreferrer">Jollof rice</a></em></strong></p>
+            <p class="odin jollof"><strong><em><a href="recipes/jollof-rice.html" target="_self" rel="noreferrer">Jollof rice</a></em></strong></p>
             
-            <p><strong><em><a href="recipes/vegetable.html" target="_self" rel="noreferrer">Vegetable soup</a></em></strong></p>
+            <p class="odin soup"><strong><em><a href="recipes/vegetable.html" target="_self" rel="noreferrer">Vegetable soup</a></em></strong></p>
 
     </body>
 
